--- a/EmployeeRegistrationpageUsingMVC/EmployeeRegistrationpageUsingMVC.csproj
+++ b/EmployeeRegistrationpageUsingMVC/EmployeeRegistrationpageUsingMVC.csproj
@@ -135,6 +135,9 @@
     <Compile Include="Models\Employeedata.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\insertaempdataproc_Result.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Model1.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
